--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -44,12 +44,12 @@
     />
     <meta property="og:autor" content="Anusree Pankan" />
 </head>
-<body>
+<body class="roboto-light">
 
     <nav class="navbar fixed-top">
         <div class="container">
-          <a onmouseover="playClick()" class="navbar-brand roboto-medium-italic text-white" href=""
-            >ANUSREE PANKAN</a
+          <a onmouseover="playClick()" class="navbar-brand roboto-light text-white" href=""
+            >AP</a
           >
           <button
             onmouseover="playAudio()"
@@ -72,7 +72,7 @@
           >
             <div class="offcanvas-header">
               <a href="">
-                <img style="width: 70px" src="images/logo.png" alt=""
+                <img style="width: 70px" src="assets/images/logo.png" alt=""
               /></a>
               <button
                 onclick="playClick()"
@@ -108,8 +108,8 @@
         </div>
       </nav>
 
-      <section class="jumbotron text-center mt-5 pt-5">
-        <div class="container banner-bg mt-5">
+      <section class="container jumbotron text-center mt-5 pt-5">
+        <div class=" banner-bg mt-5">
           <h1 class="jumbotron-heading roboto-bold text-white pt-5 pb-5">About</h1>
         </div>
       </section>
@@ -120,7 +120,7 @@
           <div class="row align-items-center gx-4">
             <div class="col-md-5">
               <div class="ms-md-2 ms-lg-5">
-                <img class="img-fluid rounded-3" src="images/about-us.png" />
+                <img class="img-fluid rounded-3" src="assets/images/about-us.png" />
               </div>
             </div>
             <div class="col-md-6 offset-md-1">
@@ -153,7 +153,7 @@
           <p class="col-md-4 mb-0 text-gray">© 2024 Anusree Pankan</p>
       
           <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-           <img src="images/logo.png" style="width: 40px;" alt="">
+           <img src="assets/images/logo.png" style="width: 40px;" alt="">
           </a>
       
           <ul class="nav col-md-4 justify-content-end">
@@ -331,10 +331,10 @@
 
 
           <!-- audio -->
-    <audio id="audio" src="audio/link.mp3" preload="auto"></audio>
-    <audio id="hover-audio" src="audio/hover.mp3" preload="auto"></audio>
+    <audio id="audio" src="assets/audio/link.mp3" preload="auto"></audio>
+    <audio id="hover-audio" src="assets/audio/hover.mp3" preload="auto"></audio>
     <!-- javascript -->
-    <script src="index.js"></script>
+    <script src="assets/js/index.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
