--- a/education.html
+++ b/education.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
     />
 <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/tutorials/timelines/timeline-4/assets/css/timeline-4.css">
-    <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,14 +45,14 @@
     />
     <meta property="og:autor" content="Anusree Pankan" />
 </head>
-<body>
+<body class="roboto-light">
 
 
 
     <nav class="navbar fixed-top">
         <div class="container">
-          <a onmouseover="playClick()" class="navbar-brand roboto-medium-italic text-white" href=""
-            >ANUSREE PANKAN</a
+          <a onmouseover="playClick()" class="navbar-brand roboto-light text-white" href=""
+            >AP</a
           >
           <button
             onmouseover="playAudio()"
@@ -75,7 +75,7 @@
           >
             <div class="offcanvas-header">
               <a href="">
-                <img style="width: 70px" src="images/logo.png" alt=""
+                <img style="width: 70px" src="assets/images/logo.png" alt=""
               /></a>
               <button
                 onclick="playClick()"
@@ -111,8 +111,8 @@
         </div>
       </nav>
 
-      <section class="jumbotron text-center mt-5 pt-5">
-        <div class="container banner-bg mt-5">
+      <section class="container jumbotron text-center mt-5 pt-5">
+        <div class="banner-bg mt-5">
           <h1 class="jumbotron-heading roboto-bold text-white pt-5 pb-5">Education</h1>
         </div>
       </section>
@@ -214,7 +214,7 @@ and assistance.
           <p class="col-md-4 mb-0 text-gray">© 2024 Anusree Pankan</p>
       
           <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-           <img src="images/logo.png" style="width: 40px;" alt="">
+           <img src="assets/images/logo.png" style="width: 40px;" alt="">
           </a>
       
           <ul class="nav col-md-4 justify-content-end">
@@ -390,10 +390,10 @@ and assistance.
       </div>
   
       <!-- audio -->
-      <audio id="audio" src="audio/link.mp3" preload="auto"></audio>
-      <audio id="hover-audio" src="audio/hover.mp3" preload="auto"></audio>
+      <audio id="audio" src="assets/audio/link.mp3" preload="auto"></audio>
+      <audio id="hover-audio" src="assets/audio/hover.mp3" preload="auto"></audio>
       <!-- javascript -->
-      <script src="index.js"></script>
+      <script src="assets/js/index.js"></script>
   
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
