--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -44,12 +44,13 @@
     />
     <meta property="og:autor" content="Anusree Pankan" />
   </head>
-  <body>
+  <body class="roboto-light">
+
     <nav class="navbar fixed-top">
       <div class="container">
-        <a onmouseover="playClick()" class="navbar-brand roboto-medium-italic text-white" href=""
-          >ANUSREE PANKAN</a
-        >
+        <a onmouseover="playClick()" class="navbar-brand roboto-light text-white" href=""
+            >AP</a
+          >
         <button
           onmouseover="playAudio()"
           class="navbar-toggler"
@@ -71,7 +72,7 @@
         >
           <div class="offcanvas-header">
             <a href="">
-              <img style="width: 70px" src="images/logo.png" alt=""
+              <img style="width: 70px" src="assets/images/logo.png" alt=""
             /></a>
             <button
               onclick="playClick()"
@@ -110,7 +111,7 @@
     <div
       style="
         height: 100vh;
-        background-image: url(images/hero.png);
+        background-image: url(assets/images/hero.png);
         background-size: cover;
         background-position: center;
       "
@@ -131,7 +132,7 @@
               <span style="color: #27a3df">Web Developer</span>
             </h1>
 
-            <p class="roboto-regular-italic">
+            <p>
               Passionate for creating attractive and interactive websites
               meeting customer needs and exceeding expectations. Use various web
               design packages to develop custom-crafted, customer-focused
@@ -158,14 +159,14 @@
         <div class="row align-items-center gx-4">
           <div class="col-md-5">
             <div class="ms-md-2 ms-lg-5">
-              <img class="img-fluid rounded-3" src="images/about-us.png" />
+              <img class="img-fluid rounded-3" src="assets/images/about-us.png" />
             </div>
           </div>
           <div class="col-md-6 offset-md-1">
             <div class="ms-md-2 ms-lg-5">
               <span class="text-gray roboto-bold">Learn About Me</span>
               <h2 class="display-5 fw-bold roboto-bold head-color">About Me</h2>
-              <p class="lead text-white">
+              <p class="lead text-white roboto-light">
                 I’m Anusree Pankan, a Web Developer with a passion for creating
                 responsive and visually engaging websites. With expertise in
                 HTML, CSS,Bootstrap, JavaScript, and React JS, I build
@@ -238,7 +239,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow ">
-              <img onmouseover="playClick()"  class="card-img-top" src="images/projects/img-1.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playClick()"  class="card-img-top" src="assets/images/projects/img-1.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">This is a Brototype clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -252,7 +253,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playAudio()"  class="card-img-top"  src="images/projects/img-3.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-3.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">This is my portfolio website, built using HTML, CSS, and JavaScript. It showcases my projects, skills, and progress as a web developer, including website clones and other front-end work.</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -265,7 +266,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playClick()"  class="card-img-top"  src="images/projects/img-2.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playClick()"  class="card-img-top"  src="assets/images/projects/img-2.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
               <div class="card-body">
                 <p class="card-text">Netflix clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -281,7 +282,7 @@
 
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playAudio()"  class="card-img-top"  src="images/projects/img-4.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-4.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
               <div class="card-body">
                 <p class="card-text">Laboratory-related company website using HTML, CSS, and JavaScript. This project enhanced my front-end development skills, with a focus on responsive design.</p>
@@ -292,7 +293,7 @@
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
               <button onmouseover="playClick()" >
-              <img class="card-img-top" src="images/projects/img-6.png" alt="Thumbnail [100%x225]" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img class="card-img-top" src="assets/images/projects/img-6.png" alt="Thumbnail [100%x225]" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
             </button>
               <div class="card-body">
                 <p class="card-text">A comprehensive digital solution for restaurant related website . Built using HTML, CSS, and JavaScript, this project provides an effective platform for managing various restaurant operations.</p>
@@ -302,7 +303,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <div class="card mb-4 box-shadow">
-              <img onmouseover="playAudio()"  class="card-img-top"  src="images/projects/img-5.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+              <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-5.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
               <div class="card-body">
                 <p class="card-text"> I developed a company website using HTML, CSS, and JavaScript. The site features a professional design and user-friendly interface, aimed at effectively presenting the company's services and values. </p>
@@ -453,7 +454,7 @@
         <p class="col-md-4 mb-0 text-gray ">© 2024 Anusree Pankan</p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-         <img src="images/logo.png" style="width: 40px;" alt="">
+         <img src="assets/images/logo.png" style="width: 40px;" alt="">
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
@@ -628,12 +629,11 @@
         </div>
       </a>
     </div>
-
     <!-- audio -->
-    <audio id="audio" src="audio/link.mp3" preload="auto"></audio>
-    <audio id="hover-audio" src="audio/hover.mp3" preload="auto"></audio>
+    <audio id="audio" src="assets/audio/link.mp3" preload="auto"></audio>
+    <audio id="hover-audio" src="assets/audio/hover.mp3" preload="auto"></audio>
     <!-- javascript -->
-    <script src="index.js"></script>
+    <script src="assets/js/index.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
