--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
     />
 <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/tutorials/timelines/timeline-4/assets/css/timeline-4.css">
-    <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="icon" type="image/x-icon" href="assets/images/"logo.png">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,14 +45,14 @@
     />
     <meta property="og:autor" content="Anusree Pankan" />
 </head>
-<body>
+<body class="roboto-light">
 
 
 
     <nav class="navbar fixed-top">
         <div class="container">
-          <a onmouseover="playClick()" class="navbar-brand roboto-medium-italic text-white" href=""
-            >ANUSREE PANKAN</a
+          <a onmouseover="playClick()" class="navbar-brand roboto-light text-white" href=""
+            >AP</a
           >
           <button
             onmouseover="playAudio()"
@@ -75,7 +75,7 @@
           >
             <div class="offcanvas-header">
               <a href="">
-                <img style="width: 70px" src="images/logo.png" alt=""
+                <img style="width: 70px" src="assets/images/logo.png" alt=""
               /></a>
               <button
                 onclick="playClick()"
@@ -111,8 +111,8 @@
         </div>
       </nav>
 
-      <section class="jumbotron text-center mt-5 pt-5">
-        <div class="container banner-bg mt-5">
+      <section class="container jumbotron text-center mt-5 pt-5">
+        <div class="banner-bg mt-5">
           <h1 class="jumbotron-heading roboto-bold text-white pt-5 pb-5">Projects</h1>
         </div>
       </section>
@@ -128,7 +128,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow ">
-            <img onmouseover="playClick()"  class="card-img-top" src="images/projects/img-1.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playClick()"  class="card-img-top" src="assets/images/projects/img-1.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">This is a Brototype clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -142,7 +142,7 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playAudio()"  class="card-img-top"  src="images/projects/img-3.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-3.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">This is my portfolio website, built using HTML, CSS, and JavaScript. It showcases my projects, skills, and progress as a web developer, including website clones and other front-end work.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -155,13 +155,13 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playClick()"  class="card-img-top"  src="images/projects/img-2.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playClick()"  class="card-img-top"  src="assets/images/projects/img-2.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
             <div class="card-body">
               <p class="card-text">Netflix clone website, created using HTML and CSS. It helped me strengthen my skills in front-end development, focusing on layout design and responsive styling. </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-dark"><a href="https://netflix-website-clone-zeta.vercel.app/" target="_blank">View</a></button>
-                  <button type="button" class="btn btn-sm btn-outline-dark"><a href="https://github.com/anusreegithub/Netflix-website-clone" target="_blank">Code</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-warning"><a href="https://netflix-website-clone-zeta.vercel.app/" target="_blank">View</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-warning"><a href="https://github.com/anusreegithub/Netflix-website-clone" target="_blank">Code</a></button>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
 
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playAudio()"  class="card-img-top"  src="images/projects/img-4.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-4.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
             <div class="card-body">
               <p class="card-text">Laboratory-related company website using HTML, CSS, and JavaScript. This project enhanced my front-end development skills, with a focus on responsive design.</p>
@@ -182,7 +182,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
             <button onmouseover="playClick()" >
-            <img class="card-img-top" src="images/projects/img-6.png" alt="Thumbnail [100%x225]" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img class="card-img-top" src="assets/images/projects/img-6.png" alt="Thumbnail [100%x225]" style="height: 222px; width: 100%; display: block;"  data-holder-rendered="true">
           </button>
             <div class="card-body">
               <p class="card-text">A comprehensive digital solution for restaurant related website . Built using HTML, CSS, and JavaScript, this project provides an effective platform for managing various restaurant operations.</p>
@@ -192,7 +192,7 @@
         </div>
         <div class="col-md-4 col-sm-12">
           <div class="card mb-4 box-shadow">
-            <img onmouseover="playAudio()"  class="card-img-top"  src="images/projects/img-5.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
+            <img onmouseover="playAudio()"  class="card-img-top"  src="assets/images/projects/img-5.png" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"  data-holder-rendered="true">
 
             <div class="card-body">
               <p class="card-text"> I developed a company website using HTML, CSS, and JavaScript. The site features a professional design and user-friendly interface, aimed at effectively presenting the company's services and values. </p>
@@ -211,7 +211,7 @@
           <p class="col-md-4 mb-0 text-gray">© 2024 Anusree Pankan</p>
       
           <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-           <img src="images/logo.png" style="width: 40px;" alt="">
+           <img src="assets/images/logo.png" style="width: 40px;" alt="">
           </a>
       
           <ul class="nav col-md-4 justify-content-end">
@@ -388,10 +388,10 @@
       </div>
   
       <!-- audio -->
-      <audio id="audio" src="audio/link.mp3" preload="auto"></audio>
-      <audio id="hover-audio" src="audio/hover.mp3" preload="auto"></audio>
+      <audio id="audio" src="assets/audio/link.mp3" preload="auto"></audio>
+      <audio id="hover-audio" src="assets/audio/hover.mp3" preload="auto"></audio>
       <!-- javascript -->
-      <script src="index.js"></script>
+      <script src="assets/js/index.js"></script>
   
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
