performance speed increased

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a
           onmouseover="playClick()"
           class="navbar-brand roboto-light text-white"
-          href=""
+          href="index.html"
           >AP</a
         >
         <button
@@ -74,7 +74,7 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <a href="">
+            <a href="index.html">
               <img style="width: 70px" src="assets/images/logo.png" alt="logo"
             /></a>
             <button
@@ -130,7 +130,7 @@
             <span style="color: #bbb" class="text-uppercase">Hi All, </span>
             <!-- on small screens remove display-4 -->
             <h1
-              onmouseover="playClick()"
+            
               class="mb-4 mt-2 display-4 font-weight-bold roboto-black"
             >
               I am Anusree Pankan
