--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <a
           onmouseover="playClick()"
           class="navbar-brand roboto-light text-white"
-          href=""
+          href="index.html"
           >AP</a
         >
         <button
@@ -72,7 +72,7 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <a href="">
+            <a href="index.html">
               <img style="width: 70px" src="assets/images/logo.png" alt="logo"
             /></a>
             <button
