--- a/education.html
+++ b/education.html
@@ -51,7 +51,7 @@
 
     <nav class="navbar fixed-top">
         <div class="container">
-          <a onmouseover="playClick()" class="navbar-brand roboto-light text-white" href=""
+          <a onmouseover="playClick()" class="navbar-brand roboto-light text-white" href="index.html"
             >AP</a
           >
           <button
@@ -74,7 +74,7 @@
             aria-labelledby="offcanvasNavbarLabel"
           >
             <div class="offcanvas-header">
-              <a href="">
+              <a href="index.html">
                 <img style="width: 70px" src="assets/images/logo.png" alt="logo"
               /></a>
               <button
