media query added

--- a/index.html
+++ b/index.html
@@ -113,13 +113,8 @@
       </div>
     </nav>
     <div
-      style="
-        height: 100vh;
-        background-image: url(assets/images/hero.png);
-        background-size: cover;
-        background-position: center;
-      "
-      class="position-relative w-100"
+    
+      class="hero-bg position-relative w-100"
     >
       <div
         class="position-absolute text-white d-flex flex-column align-items-start justify-content-center"
@@ -574,7 +569,7 @@
                   </div>
                   <div class="col-12">
                     <div class="d-grid">
-                      <button
+                      <button onmouseover="playAudio()"
                         class="btn btn-primary btn-lg submit-btn"
                         type="submit"
                       >
