responsiveness issue corrected

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         style="top: 0; right: 0; bottom: 0; left: 0"
       >
         <div class="container">
-          <div class="col-md-6">
+          <div class="col-md-12 col-lg-6">
             <span style="color: #bbb" class="text-uppercase">Hi All, </span>
             <!-- on small screens remove display-4 -->
             <h1
@@ -162,7 +162,7 @@
           <div class="col-md-5">
             <div class="ms-md-2 ms-lg-5">
               <img
-                class="img-fluid rounded-3"
+                class="img-fluid  rounded-3"
                 src="assets/images/about-us.png"
               />
             </div>
@@ -240,7 +240,7 @@
         </h2>
 
         <div class="row">
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playClick()"
@@ -277,7 +277,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playAudio()"
@@ -312,7 +312,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playClick()"
@@ -350,7 +350,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playAudio()"
@@ -370,7 +370,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <button onmouseover="playClick()">
                 <img
@@ -391,7 +391,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playAudio()"
@@ -441,7 +441,7 @@
                 onmouseover="playClick()"
                 class="btn bsb-btn-xl btn-outline-light mb-5"
               >
-                Contact Me
+               <a href="contact.html">Contact Me</a>
               </button>
             </div>
           </div>
