--- a/projects.html
+++ b/projects.html
@@ -119,17 +119,20 @@
     </section>
 
     <!-- my projects -->
-
     <div class="album py-5 mt-5">
       <div class="container">
+        <h2 class="display-5 fw-bold roboto-bold head-color mb-5 text-center">
+          My Excellent Portfolio
+        </h2>
+
         <div class="row">
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playClick()"
                 class="card-img-top"
                 src="assets/images/projects/img-1.png"
-                alt="Projec UI Screenshot"
+                alt="Project UI Screenshot"
                 style="height: 225px; width: 100%; display: block"
                 data-holder-rendered="true"
               />
@@ -160,7 +163,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playAudio()"
@@ -195,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playClick()"
@@ -213,20 +216,14 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-warning"
-                    >
+                    <button type="button" class="btn btn-sm btn-outline-dark">
                       <a
                         href="https://netflix-website-clone-zeta.vercel.app/"
                         target="_blank"
                         >View</a
                       >
                     </button>
-                    <button
-                      type="button"
-                      class="btn btn-sm btn-outline-warning"
-                    >
+                    <button type="button" class="btn btn-sm btn-outline-dark">
                       <a
                         href="https://github.com/anusreegithub/Netflix-website-clone"
                         target="_blank"
@@ -239,7 +236,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playAudio()"
@@ -259,7 +256,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <button onmouseover="playClick()">
                 <img
@@ -280,7 +277,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card mb-4 box-shadow">
               <img
                 onmouseover="playAudio()"
